# keera-hails

./: .gitignore  .hackage  .hgignore  .travis.yml  CHANGELOG  ElementaryGtkProgram.cabal  Example.hs  GladeDemo.hs  Interface.glade  LICENSE  Minimal.hs  MinimalFRP.hs  README  README.md  TODO  UI.glade  WMGui.hs  Wiimote.hs  hails-i18n.cabal  hails-mvc-controller.cabal  hails-mvc-environment-gtk.cabal  hails-mvc-model-lightmodel.cabal  hails-mvc-model-protectedmodel.cabal  hails-mvc-solutions-config.cabal  hails-mvc-solutions-gtk.cabal  hails-mvc-view-gtk.cabal  hails-mvc-view.cabal  hails-reactive-fs.cabal  hails-reactive-gtk.cabal  hails-reactive-network.cabal  hails-reactive-polling.cabal  hails-reactive-wx.cabal  hails-reactive-yampa.cabal  hails-reactivevalues.cabal  hails-templates.cabal  hails.cabal  keera-hails-mvc-environment-gtk.cabal  keera-hails-mvc-solutions-gtk.cabal  keera-hails-mvc-view-gtk.cabal  keera-hails-reactive-fs.cabal  (+5 more)
.cabal-conf/: hackage.enc
demos/image-format-guesser/: ElementaryGtkProgram.cabal  Interface.glade
demos/image-format-guesser/src/: CombinedEnvironment.hs  Controller.hs
demos/image-format-guesser/src/Controller/: Conditions.hs
demos/image-format-guesser/src/Controller/Conditions/: ConditionDirection.hs  FilenameEntry.hs  ResultLabel.hs
demos/image-format-guesser/src/Model/: Model.hs  ProtectedModel.hs  ReactiveModel.hs
demos/image-format-guesser/src/Model/ProtectedModel/: Filename.hs  ProtectedModelInternals.hs
demos/keera-hails-demos-gtk/: keera-hails-demos-gtk.cabal
demos/keera-hails-demos-gtk-dunai/: keera-hails-demos-gtk-dunai.cabal
demos/keera-hails-demos-gtk-dunai/src/: HelloWorld.hs
demos/keera-hails-demos-gtk/elementarygtkprogram/: ElementaryGtkProgram.cabal  Interface.glade
demos/keera-hails-demos-gtk/elementarygtkprogram/src/: CombinedEnvironment.hs  Controller.hs  Main.hs  View.hs
demos/keera-hails-demos-gtk/image-format-guesser/: metrics.sh
demos/keera-hails-demos-gtk/image-format-guesser/src/: CombinedEnvironment.hs  Main.hs  View.hs
demos/keera-hails-demos-gtk/src/: HelloWorld.hs
demos/keera-hails-demos-small/: LICENSE  keera-hails-demos-small.cabal
demos/keera-hails-demos-small/data/: body.html  head.html
demos/keera-hails-demos-small/src/: Controller.hs  Main.hs  Model.hs  View.hs
demos/keera-hails-demos-small/src/Data/: Action.hs  Calculator.hs
demos/keera-hails-demos-small/src/View/: HTML.hs  Types.hs
demos/keera-hails-demos-soundplay/: keera-hails-demos-soundplay.cabal
demos/keera-hails-demos-soundplay/src/: Main.hs
demos/keera-hails-gtk-app/: ChangeLog.md  README.md  keera-hails-gtk-app.cabal
demos/keera-hails-gtk-app/data/: Interface.glade
demos/keera-hails-gtk-app/src/: CombinedEnvironment.hs  Controller.hs  Main.hs  Paths.hs  View.hs
demos/keera-hails-gtk-app/src/Controller/: Conditions.hs
demos/keera-hails-gtk-app/src/Model/: Model.hs  ProtectedModel.hs  ReactiveModel.hs
demos/keera-hails-gtk-app/src/Paths/: CustomPaths.hs
demos/keera-hails-gtk-app/src/View/: Objects.hs
keera-hails/: README.md  keera-hails.cabal
keera-hails-i18n/: keera-hails-i18n.cabal
keera-hails-i18n/src/Hails/I18N/: Gettext.hs  Language.hs
keera-hails-mvc-environment-gtk/: keera-hails-mvc-environment-gtk.cabal  sources.txt
keera-hails-mvc-environment-gtk/src/Hails/MVC/: DefaultGtkEnvironment.hs  GenericCombinedEnvironment.hs
keera-hails-mvc-environment-gtk3/: keera-hails-mvc-environment-gtk3.cabal
keera-hails-mvc-environment-gtk3/src/Hails/MVC/: DefaultGtkEnvironment.hs
keera-hails-mvc-model-protectedmodel/: CHANGELOG  keera-hails-mvc-model-protectedmodel.cabal
keera-hails-mvc-solutions-config/: keera-hails-mvc-solutions-config.cabal  sources.txt
keera-hails-mvc-solutions-gtk/: keera-hails-mvc-solutions-gtk.cabal  sources.txt
keera-hails-mvc-view-gtk3/: README  keera-hails-mvc-view-gtk3.cabal
keera-hails-reactive-cbmvar/: README.md  keera-hails-reactive-cbmvar.cabal
keera-hails-reactive-cbmvar/src/Data/CBMVar/: Reactive.hs
keera-hails-reactive-cbmvar/tests/: HLintMain.hs  HaddockCoverage.hs
keera-hails-reactive-gtk/: CHANGELOG  README.md  keera-hails-reactive-gtk.cabal
keera-hails-reactive-gtk3/: keera-hails-reactive-gtk3.cabal
keera-hails-reactive-htmldom/: keera-hails-reactive-htmldom.cabal
keera-hails-reactive-network/: README.md  keera-hails-reactive-network.cabal
keera-hails-reactive-network/src/Hails/: Network.hs
keera-hails-reactive-wx/: .gitignore  keera-hails-reactive-wx.cabal
keera-hails-reactive-wx/examples/: Calc.hs  Minimal.hs
keera-hails-reactivelenses/: README  README.md  hails-reactivelenses.cabal  keera-hails-reactivelenses.cabal
keera-hails-reactivelenses/src/Data/: ReactiveLens.hs
keera-hails-reactivelenses/tests/: HLintMain.hs  HaddockCoverage.hs  Tasty.hs
keera-hails-reactivevalues/: README.md  TODO  keera-hails-reactivevalues.cabal
keera-hails-reactivevalues/src/Control/: GFunctor.hs
keera-hails-reactivevalues/src/Data/: ReactiveValue.hs
keera-hails-reactivevalues/tests/: HaddockCoverage.hs  Tasty.hs
keera-hails-templates/: hails-templates.cabal
keera-hails-templates/src/: AppDataFull.hs  Main.hs
keera-hails-templates/templates/Model/: ProtectedModel.hs  ReactiveModel.hs
keera-hails-templates/templates/Model/ProtectedModel/: ProtectedModelInternals.hs
keera-hails-templates/templates/Model/ReactiveModel/: ReactiveModelInternals.hs
keera-hails-templates/templates/Paths/: CustomPaths.hs
keera-hails/src/: AppDataBasic.hs  AppDataFull.hs  HailsArgs.hs
keera-hails/src/Control/Exception/: Extra.hs
keera-hails/src/Data/: ReactiveValue.hs
keera-hails/src/Hails/I18N/: Gettext.hs  Language.hs
keera-hails/src/Hails/MVC/: DefaultGtkEnvironment.hs  GenericCombinedEnvironment.hs
keera-hails/src/System/: Application.hs
keera-hails/templates/: Controller.hs  Paths.hs  View.hs
keera-hails/templates/Model/ProtectedModel/: ProtectedFields.hs  ProtectedModelInternals.hs
keera-hails/templates/Model/ReactiveModel/: ReactiveFields.hs  ReactiveModelInternals.hs
keera-hails/templates/View/: Objects.hs
(+238 files in other folders)
