-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails-i18n
version:       0.8.0
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://www.keera.co.uk/blog/community/
license:       BSD3
license-file:  LICENSE
copyright:     (C) 2013 Keera Studios Ltd
category:      Development
synopsis:      Rapid Gtk Application Development - I18N
description:
  Keera Hails is a rapid application development system.
  .
  The idea behind Hails is that you should be able to build cross platform
  applications with minimal effort, very quickly, and the result should be easy
  to maintain.
  .
  This package includes functions to create multi-language applications using
  <https://en.wikipedia.org/wiki/Gettext gettext>. It includes two modules: one
  to translate strings in your program, and one to load the settings from your
  configuration in your application to let users select the language.
  .
  As an application developer, the expectation is that you would offer a way
  for users to change the language in their preferences, and that that language
  selection would be stored in a configuration file named "default-language".


source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails-i18n


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True


library

  exposed-modules:
    Hails.I18N.Gettext
    Hails.I18N.Language

  build-depends:
      base         >= 4 && < 5
    , directory
    , filepath
    , glib
    , MissingK

    , utf8-string
    , hgettext
    , setlocale

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base  >= 4   && < 5
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base        >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
