-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails-mvc-model-protectedmodel
version:       0.8.0
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://www.keera.co.uk/blog/community/
license:       BSD3
license-file:  LICENSE
copyright:     (C) 2013 Keera Studios Ltd
category:      Development
synopsis:      Rapid Gtk Application Development - Protected Reactive Models
description:
  Protected Models are Thread-safe (STM) Reactive Models
  with change propagation and notification. They are meant
  to enclose a whole (MVC) application's model, using field
  accessors to access every part of a Protected Model as a
  Reactive Value.

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails-mvc-model-protectedmodel


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True


library

  exposed-modules:
    Hails.MVC.Model.ProtectedModel
    Hails.MVC.Model.ProtectedModel.Reactive
    Hails.MVC.Model.ProtectedModel.Initialisation
    Hails.MVC.Model.THAccessors
    Hails.MVC.Model.THFields
    Hails.MVC.Model.ReactiveFields
    Hails.MVC.Model.ReactiveModel.Initialisation
    Hails.MVC.Model.ReactiveModel
    Hails.MVC.Model.ReactiveModel.Events

  build-depends:
      base             >= 4 && < 5
    , template-haskell
    , containers
    , stm
    , MissingK

    , keera-hails-reactivevalues

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base  >= 4   && < 5
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base        >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
