cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails-reactive-gtk3
version:       0.0.3.5
author:        Ivan Perez
maintainer:    ivan.perez@keera.co.uk
homepage:      http://www.keera.co.uk/blog/community/
license:       BSD3
license-file:  LICENSE
category:      Development
synopsis:      Haskell on Gtk3 rails - Reactive Fields for Gtk widgets

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails-reactive-gtk3

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True

library

  exposed-modules:
    Graphics.UI.Gtk.Reactive
    Graphics.UI.Gtk.Reactive.Button
    Graphics.UI.Gtk.Reactive.CheckMenuItem
    Graphics.UI.Gtk.Reactive.Entry
    Graphics.UI.Gtk.Reactive.Label
    Graphics.UI.Gtk.Reactive.MenuItem
    Graphics.UI.Gtk.Reactive.Scale
    Graphics.UI.Gtk.Reactive.SpinButton
    Graphics.UI.Gtk.Reactive.TextView
    Graphics.UI.Gtk.Reactive.ToolButton
    Graphics.UI.Gtk.Reactive.TypedComboBoxUnsafe
    Graphics.UI.Gtk.Reactive.ToggleButton

  build-depends:
      base >= 4
    , mtl
    , gtk3
    , gtk3-helpers
    , pango
    , hails-reactivevalues

  default-language: Haskell2010

  hs-source-dirs: src/

  ghc-options: -Wall -fno-warn-unused-do-bind -O2

test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base
      , hlint                >= 1.7

  default-language:
    Haskell2010


-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base                 >= 4        && < 5
      , directory
      , filepath
      , process
      , regex-posix

  default-language:
    Haskell2010
