-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >=1.10
build-type:    Simple

name:          keera-hails-reactive-htmldom
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://github.com/keera-studios/keera-hails
license:       BSD3
license-file:  LICENSE
category:      Web
version:       0.0.1
synopsis:      Keera Hails Reactive bindings for HTML DOM via GHCJS

source-repository head
 type: git
 location: git://github.com/keera-studios/keera-hails
 subdir: keera-hails-reactive-htmldom


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True


library

  exposed-modules:
    Hails.MVC.View.HTML

  build-depends:
      base >=4.2 && <5
    , ghcjs-dom >=0.2 && <0.3
    , keera-callbacks
    , keera-hails-reactivevalues >=0.1.0 && <0.2
    , transformers >=0.4.3.0 && <0.5

  hs-source-dirs:      src/
  default-language:    Haskell2010

test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base
      , hlint                >= 1.7

  default-language:
    Haskell2010


-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base                 >= 4        && < 5
      , directory
      , filepath
      , process
      , regex-posix

  default-language:
    Haskell2010
