-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails-reactive-htmldom
version:       0.8.0
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://github.com/keera-studios/keera-hails
license:       BSD3
license-file:  LICENSE
copyright:     (C) 2013 Keera Studios Ltd
category:      Web
synopsis:      Keera Hails Reactive bindings for HTML DOM via GHCJS
description:
  A layer defining RVs for HTML element fields and actions.
  .
  Reactive Values are an abstraction for reactive programming based on setters
  and getters with change-based propagation.
  .
  They enable easy communication/synchronization rules via Reactive Rules
  (RRs), which can keep two type-compatible RVs in sync directionally or
  bidirectionally.
  .
  This library provides operations to turn HTML element properties and
  fields into RVs, so that they can be used to create reactive user
  interfaces with minimal effort.
  .
  For details, please see the paper "Bridging the GUI Gap with Reactive Values
  and Relations", by Ivan Perez and Henrik Nilsson at Haskell Symposium 2015.

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails-reactive-htmldom


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True


library

  exposed-modules:
    Hails.MVC.View.HTML

  build-depends:
      base                        >= 4.2     && < 5
    , ghcjs-dom                   >= 0.2     && < 0.10
    , keera-callbacks
    , keera-hails-reactivevalues  >= 0.1.0   && < 0.9
    , keera-hails-reactive-cbmvar
    , mtl
    , transformers                >= 0.4.3.0 && < 0.6

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base  >= 4   && < 5
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base        >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
