-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails-reactivelenses
version:       0.8.0
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://www.keera.co.uk/blog/community/
license:       BSD3
license-file:  LICENSE
copyright:     (C) 2013 Keera Studios Ltd
category:      Development
synopsis:      Reactive Haskell on Rails - Lenses applied to Reactive Values
description:
  Keera Hails is a rapid application development system.
  .
  The idea behind Hails is that you should be able to build cross platform
  applications with minimal effort, very quickly, and the result should be easy
  to maintain.
  .
  Large Hails applications are structured following an optimized MVC
  architecture. Values are updated either from the view to the model, or from
  the model to the view. Internally, rules use a notion of direction in the
  update to determine how different components must be updated.
  .
  This library provides a way to use lenses to focus on a specific
  part of a reactive value.

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails-reactivelenses

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: True
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: True
  manual:  True

flag test-unit-tests
  default: True
  manual:  True

library

  exposed-modules:
    Data.ReactiveLens

  build-depends:
      base >= 4 && < 5
    , lens

    , keera-hails-reactivevalues

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base  >= 4   && < 5
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base        >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix

test-suite unit-tests

  type:
    exitcode-stdio-1.0

  main-is:
    Tasty.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-unit-tests)
    buildable: False
  else
    build-depends:
        base >= 4 && < 5
      , mtl

      , keera-hails-reactivevalues

      , tasty
      , tasty-quickcheck
      , tasty-hunit
      , QuickCheck
      , HUnit
